@@ -18,7 +18,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -26,7 +26,7 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -34,7 +34,7 @@ public class DepartmentsTest {
     @Test
     public void whenMixed() {
         List<String> input = Arrays.asList("k1/sk1", "k2/sk1/ssk2");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1",
+        List<String> expect = List.of("k1", "k1/sk1", "k2", "k2/sk1",
                 "k2/sk1/ssk2");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
@@ -48,7 +48,7 @@ public class DepartmentsTest {
         String str4 = "K2";
         String str5 = "K1/SK2";
         List<String> list = Arrays.asList(str1, str2, str3, str4, str5);
-        List<String> expected = Arrays.asList(str1, str2, str5, str4, str3);
+        List<String> expected = List.of(str1, str2, str5, str4, str3);
         Departments.sortAsc(list);
         assertEquals(expected, list);
     }
@@ -61,7 +61,7 @@ public class DepartmentsTest {
         String str4 = "K2";
         String str5 = "K1/SK2";
         List<String> list = Arrays.asList(str1, str2, str3, str4, str5);
-        List<String> expected = Arrays.asList(str4, str3, str1, str2, str5);
+        List<String> expected = List.of(str4, str3, str1, str2, str5);
         Departments.sortDesc(list);
         assertEquals(expected, list);
     }
